# 2021H-c04-s01-exercices

./: .gitignore  README.md
Exercises/: Arguments - Copy.cpp  Arguments.cpp  Arguments.hpp  CMakeLists.txt  Exercises.vcxproj  Exercises.vcxproj.filters  main.cpp
Exercises/_version_prof/: Arguments.cpp  main.cpp
Exercises/data/: data.txt
doc/: Classroom.md  Vcpkg.md
settings/: files_to_update.txt  variables.txt
